--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,10 +20,8 @@ jobs:
     steps: 
       # Download repo
       - uses: actions/checkout@v2
-
-      # Update submodules
-      - name: Update submodules
-        run: git submodule update --init
+        with:
+          submodules: 'recursive'
 
       # Setup dotnet
       - name: Setup dotnet
@@ -64,10 +62,8 @@ jobs:
     steps: 
       # Download repo
       - uses: actions/checkout@v2
-
-      # Update submodules
-      - name: Update submodules
-        run: git submodule update --init
+        with:
+          submodules: 'recursive'
 
       # Setup dotnet
       - name: Setup dotnet
@@ -108,10 +104,8 @@ jobs:
     steps: 
       # Download repo
       - uses: actions/checkout@v2
-
-      # Update submodules
-      - name: Update submodules
-        run: git submodule update --init
+        with:
+          submodules: 'recursive'
 
       # Setup dotnet
       - name: Setup dotnet
