[ci-skip][lint-skip]Fix asar.yaml not pulling repo recursively

--- a/.github/workflows/asar.yaml
+++ b/.github/workflows/asar.yaml
@@ -9,7 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      
+        with:
+          submodules: 'recursive'
+
       # Update submodules
       - name: Update submodules
         run: git submodule update --init   
@@ -42,7 +44,9 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
-      
+        with:
+          submodules: 'recursive'
+
       # Update submodules
       - name: Update submodules
         run: git submodule update --init 
@@ -79,7 +83,9 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      
+        with:
+          submodules: 'recursive'
+
       # Update submodules
       - name: Update submodules
         run: git submodule update --init 
