[ci-skip][lint-skip]Fix asar build workflow

--- a/.github/workflows/asar.yaml
+++ b/.github/workflows/asar.yaml
@@ -25,10 +25,10 @@ jobs:
         shell: bash
         run: |
           mkdir ./bin
-          cmake -S ./src/Asar/src -B ./src/Asar/out
-          cd ./src/Asar/out/asar
+          cmake -S ./deps/asar/Asar/src -B ./deps/asar/Asar/out
+          cd ./deps/asar/Asar/out/asar
           make
-          cp ./src/Asar/out/asar/libasar.so ./src/deps/asar/libasar.so
+          cp ./deps/asar/Asar/out/asar/libasar.so ./src/deps/asar/libasar.so
           git add .
           git commit -m "[ci-skip][lint-skip][BuildAsar] Update deps/asar/libasar.so"
           git push
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-artifact@v2.2.4
         with:
           name: AsarLinux
-          path: ./src/Asar/out/asar/libasar.so
+          path: ./deps/asar/Asar/out/asar/libasar.so
           retention-days: 30
   
   BuildAsarWindows:
@@ -63,11 +63,11 @@ jobs:
       - name: Cmake asar
         run: |
           mkdir ./bin
-          cmake -S ./src/Asar/src -B ./src/Asar/out
-          cd ./src/Asar/out/asar
+          cmake -S ./deps/asar/Asar/src -B ./deps/asar/Asar/out
+          cd ./deps/asar/Asar/out/asar
           msbuild asar.vcxproj
-          mv ./src/Asar/out/asar/Debug/asar.dll ./src/Asar/out/asar/Debug/libasar.dll
-          cp ./src/Asar/out/asar/Debug/libasar.dll ./src/deps/asar/libasar.dll
+          mv ./deps/asar/Asar/out/asar/Debug/asar.dll ./deps/asar/Asar/out/asar/Debug/libasar.dll
+          cp ./deps/asar/Asar/out/asar/Debug/libasar.dll ./src/deps/asar/libasar.dll
           git add .
           git commit -m "[ci-skip][lint-skip][BuildAsar] Update deps/asar/libasar.dll"
           git push
@@ -76,7 +76,7 @@ jobs:
         uses: actions/upload-artifact@v2.2.4
         with:
           name: AsarWindows
-          path: ./src/Asar/out/asar/Debug/libasar.dll
+          path: ./deps/asar/Asar/out/asar/Debug/libasar.dll
           retention-days: 30
           
   BuildAsarMacOS:
@@ -99,10 +99,10 @@ jobs:
         shell: bash
         run: |
           mkdir ./bin
-          cmake -S ./src/Asar/src -B ./src/Asar/out
-          cd ./src/Asar/out/asar
+          cmake -S ./deps/asar/Asar/src -B ./deps/asar/Asar/out
+          cd ./deps/asar/Asar/out/asar
           make
-          cp ./src/Asar/out/asar/libasar.dylib ./src/deps/asar/libasar.dylib
+          cp ./deps/asar/Asar/out/asar/libasar.dylib ./src/deps/asar/libasar.dylib
           git add .
           git commit -m "[ci-skip][lint-skip][BuildAsar] Update deps/asar/libasar.dylib"
           git push
@@ -111,5 +111,5 @@ jobs:
         uses: actions/upload-artifact@v2.2.4
         with:
           name: AsarMacOS
-          path: ./src/Asar/out/asar/libasar.dylib
+          path: ./deps/asar/Asar/out/asar/libasar.dylib
           retention-days: 30
