--- a/.github/workflows/asar.yaml
+++ b/.github/workflows/asar.yaml
@@ -29,7 +29,7 @@ jobs:
           cd ./deps/asar/Asar/out/asar
           make
           cd ../../../../../
-          cp ./deps/asar/Asar/out/asar/libasar.so ./src/deps/asar/libasar.so
+          cp ./deps/asar/Asar/out/asar/libasar.so ./deps/asar/libasar.so
           git add .
           git commit -m "[ci-skip][lint-skip][BuildAsar] Update deps/asar/libasar.so"
           git push
@@ -69,7 +69,7 @@ jobs:
           msbuild asar.vcxproj
           cd ../../../../../
           mv ./deps/asar/Asar/out/asar/Debug/asar.dll ./deps/asar/Asar/out/asar/Debug/libasar.dll
-          cp ./deps/asar/Asar/out/asar/Debug/libasar.dll ./src/deps/asar/libasar.dll
+          cp ./deps/asar/Asar/out/asar/Debug/libasar.dll ./deps/asar/libasar.dll
           git add .
           git commit -m "[ci-skip][lint-skip][BuildAsar] Update deps/asar/libasar.dll"
           git push
@@ -105,7 +105,7 @@ jobs:
           cd ./deps/asar/Asar/out/asar
           make
           cd ../../../../../
-          cp ./deps/asar/Asar/out/asar/libasar.dylib ./src/deps/asar/libasar.dylib
+          cp ./deps/asar/Asar/out/asar/libasar.dylib ./deps/asar/libasar.dylib
           git add .
           git commit -m "[ci-skip][lint-skip][BuildAsar] Update deps/asar/libasar.dylib"
           git push
