--- a/.github/workflows/asar.yaml
+++ b/.github/workflows/asar.yaml
@@ -11,17 +11,13 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
-
-      # Update submodules
-      - name: Update submodules
-        run: git submodule update --init   
               
       # Get CMake
       - name: Get CMake
         uses: lukka/get-cmake@v3.21.2
 
       # CMake Asar project
-      - name: Cmake asar
+      - name: Build and update asar in deps
         shell: bash
         run: |
           mkdir ./bin
@@ -30,6 +26,8 @@ jobs:
           make
           cd ../../../../../
           cp ./deps/asar/Asar/out/asar/libasar.so ./deps/asar/libasar.so
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add .
           git commit -m "[ci-skip][lint-skip][BuildAsar] Update deps/asar/libasar.so"
           git push
@@ -47,10 +45,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
-
-      # Update submodules
-      - name: Update submodules
-        run: git submodule update --init 
         
       # Get CMake
       - name: Get CMake
@@ -61,7 +55,7 @@ jobs:
         uses: microsoft/setup-msbuild@v1.0.3
 
       # CMake Asar project
-      - name: Cmake asar
+      - name: Build and update asar in deps
         run: |
           mkdir ./bin
           cmake -S ./deps/asar/Asar/src -B ./deps/asar/Asar/out
@@ -70,6 +64,8 @@ jobs:
           cd ../../../../../
           mv ./deps/asar/Asar/out/asar/Debug/asar.dll ./deps/asar/Asar/out/asar/Debug/libasar.dll
           cp ./deps/asar/Asar/out/asar/Debug/libasar.dll ./deps/asar/libasar.dll
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add .
           git commit -m "[ci-skip][lint-skip][BuildAsar] Update deps/asar/libasar.dll"
           git push
@@ -87,17 +83,13 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
-
-      # Update submodules
-      - name: Update submodules
-        run: git submodule update --init 
       
       # Get CMake
       - name: Get CMake
         uses: lukka/get-cmake@v3.21.2
 
       # CMake Asar project
-      - name: Cmake asar
+      - name: Build and update asar in deps
         shell: bash
         run: |
           mkdir ./bin
@@ -106,6 +98,8 @@ jobs:
           make
           cd ../../../../../
           cp ./deps/asar/Asar/out/asar/libasar.dylib ./deps/asar/libasar.dylib
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add .
           git commit -m "[ci-skip][lint-skip][BuildAsar] Update deps/asar/libasar.dylib"
           git push
