--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,7 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       # Download repo
-      - uses: actions/checkout@v2
+      - name: Pull repo
+        uses: actions/checkout@v2
         with:
           submodules: 'recursive'
         
@@ -49,7 +50,8 @@ jobs:
     runs-on: windows-latest
     steps: 
       # Download repo
-      - uses: actions/checkout@v2
+      - name: Pull repo
+        uses: actions/checkout@v2
         with:
           submodules: 'recursive'
         
@@ -83,7 +85,8 @@ jobs:
     runs-on: macos-latest
     steps: 
       # Download repo
-      - uses: actions/checkout@v2
+      - name: Pull repo
+        uses: actions/checkout@v2
         with:
           submodules: 'recursive'
         
