[ci-skip] [lint-skip] Project saving and first-time loading

--- a/src/Mole.Shared/Mole.Shared.csproj
+++ b/src/Mole.Shared/Mole.Shared.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="ASM Patches\empty.asm">
+    <Content Include="Patches\empty.asm">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
