--- a/src/Mole.Gui/Mole.Gui.csproj
+++ b/src/Mole.Gui/Mole.Gui.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <!-- Asar -->
     <Content Include="..\..\deps\asar\libasar.so" Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))'">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <Link>libasar.so</Link>
@@ -39,6 +40,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <Link>libasar.dll</Link>
     </Content>
+
+    <!-- ImGui -->
     <Content Include="..\..\deps\cimgui\linux-x64\cimgui.so" Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))'">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <Link>libcimgui.so</Link>
@@ -51,5 +54,27 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <Link>cimgui.dll</Link>
     </Content>
+
+    <!-- SDL2 Image -->
+    <Content Include="..\..\deps\sdl2_image\ibsdl2_image.dylib" Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))'">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Link>libsdl2_image.dylib</Link>
+    </Content>
+    <Content Include="..\..\deps\sdl2_image\SDL2_image.dll" Condition="'$(OS)' == 'Windows_NT'">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Link>SDL2_image.dll</Link>
+    </Content>
+
+    <!-- Icon -->
+    <Content Include="..\..\res\Icon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Link>Icon.png</Link>
+    </Content>
+    <EmbeddedResource Include="..\..\res\Icon.ico">
+      <LogicalName>Icon.ico</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\..\res\Icon.bmp">
+      <LogicalName>Icon.bmp</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
