--- a/src/Mole.Gui/Mole.Gui.csproj
+++ b/src/Mole.Gui/Mole.Gui.csproj
@@ -1,103 +1,19 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>Mole.Gui</RootNamespace>
-    <StartupObject>Mole.Gui.Program</StartupObject>
-    <AssemblyName>Mole.Gui</AssemblyName>
-    <ApplicationIcon />
-    <AssemblyVersion>0.1.0.0</AssemblyVersion>
-    <FileVersion>0.1.0.0</FileVersion>
-    <RepositoryUrl>https://github.com/Vawlpe/MOLE</RepositoryUrl>
-    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
-    <Copyright>Copyright 2021 Vawlpe</Copyright>
-    <Authors>Mole.Gui</Authors>
-    <Company>Mole.Gui</Company>
-    <Product />
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <PlatformTarget>x64</PlatformTarget>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Mole.MonoGame\Mole.MonoGame.csproj" />
-    <ProjectReference Include="..\Mole.Shared\Mole.Shared.csproj" />
-    <ProjectReference Include="..\Mole.Veldrid\Mole.Veldrid.csproj" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="ImGui.NET" Version="1.78.0" />
-    <PackageReference Include="Serilog" Version="2.10.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
-    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+    <PackageReference Include="Serilog" Version="2.11.0-dev-01377" />
   </ItemGroup>
 
   <ItemGroup>
-    <!-- Asar -->
-    <Content Include="..\..\deps\asar\libasar.so" Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))'">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>libasar.so</Link>
-    </Content>
-    <Content Include="..\..\deps\asar\libasar.dylib" Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))'">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>libasar.dylib</Link>
-    </Content>
-    <Content Include="..\..\deps\asar\libasar.dll" Condition="'$(OS)' == 'Windows_NT'">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>libasar.dll</Link>
-    </Content>
-
-    <!-- ImGui -->
-    <Content Include="..\..\deps\cimgui\linux-x64\cimgui.so" Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))'">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>libcimgui.so</Link>
-    </Content>
-    <Content Include="..\..\deps\cimgui\osx-x64\cimgui.dylib" Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))'">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>cimgui.dylib</Link>
-    </Content>
-    <Content Include="..\..\deps\cimgui\win-x64\cimgui.dll" Condition="'$(OS)' == 'Windows_NT'">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>cimgui.dll</Link>
-    </Content>
-
-    <!-- Icon -->
-    <Content Include="..\..\res\Icon.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>Icon.png</Link>
-    </Content>
-    <EmbeddedResource Include="..\..\res\Icon.ico">
-      <LogicalName>Icon.ico</LogicalName>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\..\res\Icon.bmp">
-      <LogicalName>Icon.bmp</LogicalName>
-    </EmbeddedResource>
+    <ProjectReference Include="..\Mole.BaseRenderer\Mole.BaseRenderer.csproj" />
+    <ProjectReference Include="..\Mole.Shared\Mole.Shared.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <None Include="..\..\LICENSE.md">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="App.Designer.cs">
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>App.settings</DependentUpon>
-    </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="App.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>App.Designer.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
 </Project>
