--- a/src/Mole.MonogameRenderer/MonogameRenderer.csproj
+++ b/src/Mole.MonogameRenderer/MonogameRenderer.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <RootNamespace>Mole</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,12 +18,8 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Delete Files="$(ProjectDir)..\Mole.EntryPoint\bin\Debug\net6.0\Renderers\$(TargetFileName)" Condition="Exists('$(ProjectDir)..\Mole.EntryPoint\bin\Debug\net6.0\Renderers\$(TargetFileName)')"/>
-    <Copy SourceFiles="$(TargetPath)"
-          DestinationFolder="$(ProjectDir)..\Mole.EntryPoint\bin\Debug\net6.0\Renderers\"
-          SkipUnchangedFiles="true"
-          OverwriteReadOnlyFiles="true"
-          />
+    <Delete Files="$(ProjectDir)..\Mole.EntryPoint\bin\Debug\net6.0\Renderers\$(TargetFileName)" Condition="Exists('$(ProjectDir)..\Mole.EntryPoint\bin\Debug\net6.0\Renderers\$(TargetFileName)')" />
+    <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(ProjectDir)..\Mole.EntryPoint\bin\Debug\net6.0\Renderers\" SkipUnchangedFiles="true" OverwriteReadOnlyFiles="true" />
   </Target>
 
 </Project>
