--- a/src/Mole.Gui/Mole.Gui.csproj
+++ b/src/Mole.Gui/Mole.Gui.csproj
@@ -1,36 +1,28 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <OutputType>Library</OutputType>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
     <RootNamespace>Mole.Gui</RootNamespace>
-    <StartupObject>Mole.Gui.Program</StartupObject>
     <AssemblyName>Mole.Gui</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PlatformTarget>x64</PlatformTarget>
+
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="ImGui.NET" Version="1.86.0" />
     <PackageReference Include="Serilog" Version="2.11.0-dev-01377" />
-    <ProjectReference Include="..\Mole.Shared\Mole.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="..\..\deps\asar\libasar.so" Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))'">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>libasar.so</Link>
-    </Content>
-    <Content Include="..\..\deps\asar\libasar.dylib" Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))'">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>libasar.dylib</Link>
-    </Content>
-    <Content Include="..\..\deps\asar\libasar.dll" Condition="'$(OS)' == 'Windows_NT'">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>libasar.dll</Link>
-    </Content>
+    <ProjectReference Include="..\Mole.BaseRenderer\Mole.BaseRenderer.csproj" />
+    <ProjectReference Include="..\Mole.Shared\Mole.Shared.csproj" />
   </ItemGroup>
+
 </Project>
