--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "deps/asar/Asar"]
-	path = deps/asar/Asar
-	url = https://github.com/RPGHacker/asar.git
+[submodule "src/Renderers/MonogameXNA-Renderer"]
+	path = src/Renderers/MonogameXNA-Renderer
+	url = https://github.com/RetroMole/MonogameXNA-Renderer.git
