--- a/src/RetroMole.Shared/RetroMole.Core.csproj
+++ b/src/RetroMole.Shared/RetroMole.Core.csproj
@@ -1,12 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <SignAssembly>True</SignAssembly>
-    <DelaySign>False</DelaySign>
-    <AssemblyOriginatorKeyFile>C:\Users\high\source\repos\Mole\RetroMole\src\IdentityKey.snk</AssemblyOriginatorKeyFile>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
@@ -21,6 +18,14 @@
   <ItemGroup>
     <PackageReference Include="ImGui.NET" Version="1.86.0" />
     <PackageReference Include="Serilog" Version="2.11.0-dev-01380" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\Asar\CMake-out\asar\asar.vcxproj">
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+      <OutputItemType>Content</OutputItemType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
