--- a/src/RetroMole.Gui.Widgets/RetroMole.Gui.Widgets.csproj
+++ b/src/RetroMole.Gui.Widgets/RetroMole.Gui.Widgets.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="ImGui.NET" Version="1.86.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RetroMole.Shared\RetroMole.Core.csproj" />
+  </ItemGroup>
+
 </Project>
