--- a/src/RetroMole.Core/RetroMole.Core.csproj
+++ b/src/RetroMole.Core/RetroMole.Core.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <PackageReference Include="ImGui.NET" Version="1.86.0" />
     <PackageReference Include="Serilog" Version="2.11.0-dev-01380" />
+    <PackageReference Include="Tommy" Version="3.1.2" />
   </ItemGroup>
 
 </Project>
