--- a/src/RetroMole.Launch/RetroMole.Launch.csproj
+++ b/src/RetroMole.Launch/RetroMole.Launch.csproj
@@ -12,11 +12,12 @@
     <PackageReference Include="Serilog" Version="2.11.0-dev-01380" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.2-dev-00890" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00947" />
+    <PackageReference Include="Tommy" Version="3.1.2" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RetroMole.Core\RetroMole.Core.csproj" />
     <ProjectReference Include="..\RetroMole.Gui\RetroMole.Gui.csproj" />
-    <ProjectReference Include="..\RetroMole.Shared\RetroMole.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -39,6 +40,16 @@
   
   <ItemGroup>
     <None Include="..\Assets\**" CopyToOutputDirectory="PreserveNewest" LinkBase="Assets\" visible="false" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <None Remove="core_cfg.toml" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Content Include="core_cfg.toml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
