--- a/src/RetroMole.Core/RetroMole.Core.csproj
+++ b/src/RetroMole.Core/RetroMole.Core.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="ImGui.Net" Version="1.87.3" />
+    <PackageReference Include="SharpZipLib" Version="1.3.3" />
     <PackageReference Include="Spdx" Version="0.2.0" />
   </ItemGroup>
 
