--- a/src/RetroMole.Core/RetroMole.Core.csproj
+++ b/src/RetroMole.Core/RetroMole.Core.csproj
@@ -7,9 +7,37 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ImGui.Net" Version="1.87.3" />
+    <!-- <PackageReference Include="ImGui.Net" Version="1.87.3" /> -->
     <PackageReference Include="SharpZipLib" Version="1.3.3" />
     <PackageReference Include="Spdx" Version="0.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ImGui.NET\src\ImGui.NET\ImGui.NET.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="..\ImGui.NET\deps\cimgui\win-x86\cimgui.dll" CopyToOutputDirectory="PreserveNewest">
+      <PackagePath>runtimes/win-x86/native</PackagePath>
+      <Pack>true</Pack>
+      
+    </Content>
+    <Content Include="..\ImGui.NET\deps\cimgui\win-x64\cimgui.dll" CopyToOutputDirectory="PreserveNewest">
+      <PackagePath>runtimes/win-x64/native</PackagePath>
+      <Pack>true</Pack>
+    </Content>
+    <Content Include="..\ImGui.NET\deps\cimgui\linux-x64\cimgui.so" CopyToOutputDirectory="PreserveNewest">
+      <PackagePath>runtimes/linux-x64/native/libcimgui.so</PackagePath>
+      <Pack>true</Pack>
+    </Content>
+    <Content Include="..\ImGui.NET\deps\cimgui\osx\cimgui.dylib" CopyToOutputDirectory="PreserveNewest">
+      <PackagePath>runtimes/osx/native/libcimgui.dylib</PackagePath>
+      <Pack>true</Pack>
+    </Content>
+    <Content Include="build\net40\ImGui.NET.targets">
+      <PackagePath>build/net40/ImGui.NET.targets</PackagePath>
+      <Pack>true</Pack>
+    </Content>
   </ItemGroup>
 
 </Project>
