--- a/src/Packages/RetroMole.Render.Veldrid/RetroMole.Render.Veldrid.csproj
+++ b/src/Packages/RetroMole.Render.Veldrid/RetroMole.Render.Veldrid.csproj
@@ -27,6 +27,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\RetroMole.Core\RetroMole.Core.csproj" />
-    <ProjectReference Include="..\..\ImGui.NET\src\ImGui.NET\ImGui.NET.csproj" />
+    <ProjectReference Include="..\..\..\submodules\ImGui.NET\src\ImGui.NET\ImGui.NET.csproj" />
   </ItemGroup>
 </Project>
