--- a/src/RetroMole.Launch/RetroMole.Launch.csproj
+++ b/src/RetroMole.Launch/RetroMole.Launch.csproj
@@ -1,22 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <ProjectReference Include="..\RetroMole.Core\RetroMole.Core.csproj" />
-    <ProjectReference Include="..\RetroMole.Gui\RetroMole.Gui.csproj" />
-  </ItemGroup>
-
-  <PropertyGroup>
+ <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\RetroMole.Core\RetroMole.Core.csproj" />
+    <ProjectReference Include="..\RetroMole.Gui\RetroMole.Gui.csproj" />
+  </ItemGroup>
+
+ 
 
   <ItemGroup>
     <ProjectReference Include="..\Packages\RetroMole.Render.Veldrid\RetroMole.Render.Veldrid.csproj" DestinationSubDirectory="Packages\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Serilog" Version="2.11.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="spdx" Version="0.2.0" />
   </ItemGroup>
 
